--- a/src/server/views/index.jade
+++ b/src/server/views/index.jade
@@ -1,7 +1,7 @@
 html
   head
     title!= title
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
+    link(rel='stylesheet', href='css/font-awesome.min.css')
     style(type='text/css').
       @font-face {
         font-family: "wayfinder-icons";
